<resources>
    <string name="app_name">iMed</string>
    <string name="logo_desc">Logo iMed</string>
    <string name="login_instruction">Digite seu e-mail de acesso</string>
    <string name="hint_email">E-mail</string>
    <string name="btn_next">PRÓXIMO</string>
    <string name="tv_signup">Não tem uma conta? Cadastre-se</string>
    <string name="login_welcome">Bem-vindo</string>
    <string name="login_title">Login</string>
    <string name="email_label">Email</string>
    <string name="email_placeholder">exemplo@email.com</string>
    <string name="password_title">Senha</string>
    <string name="password_instruction">Insira sua senha para continuar</string>
    <string name="password_label">Senha</string>
    <string name="password_placeholder">••••••••</string>
    <string name="btn_login">LOGAR</string>
    <string name="btn_cancel">CANCELAR</string>
    <string name="tv_forgot_password">Esqueceu a senha? Recuperar conta</string>
    <string name="signup_title">Sign Up</string>
    <string name="signup_instruction">Crie sua conta para acessar o iMed</string>
    <string name="name_label">Nome Completo</string>
    <string name="name_placeholder">Seu nome aqui</string>
    <string name="cpf_label">CPF</string>
    <string name="cpf_placeholder">000.000.000-00</string>
    <string name="btn_signup">CADASTRAR</string>
    <string name="already_have_account">Já tem uma conta? Faça Login</string>
    <string name="menu_greeting">Olá, Paciente</string>
    <string name="menu_subtitle">O que você deseja fazer hoje?</string>
    <string name="menu_data">Meus Dados</string>
    <string name="menu_new_appt">Novo Agendamento</string>
    <string name="menu_view_agenda">Minha Agenda</string>
    <string name="menu_history">Histórico</string>
    <string name="menu_logout">Sair</string>
    <string name="menu_greeting_doctor">Olá, Dr(a).</string>
    <string name="menu_doctor_subtitle">Gerencie suas consultas hoje</string>
    <string name="menu_appointments">Agendamentos</string>
    <string name="menu_doctor_patients">Meus Pacientes</string>
    <string name="menu_greeting_admin">Olá, Administrador</string>
    <string name="menu_admin_subtitle">Gestão do sistema iMed</string>
    <string name="menu_register_doctor">Cadastrar Médicos</string>
    <string name="menu_list_doctors">Consultar Médicos</string>
    <string name="menu_reports">Relatórios</string>
    <string name="personal_info_title">Informações Pessoais</string>
    <string name="personal_info_subtitle">Gerencie seus dados e preferências</string>
    <string name="hint_name">Nome Completo</string>
    <string name="hint_gender">Gênero</string>
    <string name="hint_alergias">Alergias</string>
    <string name="hint_blood_type">Tipo Sanguíneo</string>
    <string name="hint_rg">RG</string>
    <string name="hint_phone">Celular</string>
    <string name="hint_birthdate">Data Nasc.</string>
    <string name="hint_cep">CEP</string>
    <string name="hint_uf">UF</string>
    <string name="hint_city">Cidade</string>
    <string name="hint_address">Endereço</string>
    <string name="hint_number">Nº</string>
    <string name="hint_cpf">CPF</string>
    <string name="btn_save">SALVAR</string>
    <string name="btn_back">VOLTAR</string>
    <string name="btn_delete">EXCLUIR CONTA</string>
    <string name="doctor_signup_title">Cadastro de Médico</string>
    <string name="doctor_signup_subtitle">Insira os dados profissionais e de acesso</string>
    <string name="doctor_personal_section">DADOS PESSOAIS</string>
    <string name="doctor_professional_section">DADOS PROFISSIONAIS</string>
    <string name="doctor_access_section">DADOS DE ACESSO</string>
    <string name="hint_specialty">Especialidade</string>
    <string name="hint_crm">CRM</string>
    <string name="btn_register">CADASTRAR</string>
    <string name="doctor_edit_title">Editar Médico</string>
    <string name="doctor_edit_subtitle">Atualize os dados profissionais do médico</string>
    <string name="btn_save_changes">SALVAR ALTERAÇÕES</string>
    <string name="doctor_details_title">Detalhes do Médico</string>
    <string name="doctor_details_subtitle">Informações profissionais e cadastrais</string>
    <string name="btn_edit">EDITAR</string>
    <string name="btn_deactivate">INATIVAR MÉDICO</string>
    <string name="doctor_list_title">Consulta de Médicos</string>
    <string name="doctor_list_subtitle">Gerencie o corpo clínico do iMed</string>
    <string name="search_hint">Buscar médico por nome…</string>
    <string name="forgot_password_title">Recuperar Senha</string>
    <string name="forgot_password_subtitle">Enviaremos um link de redefinição para seu e-mail</string>
    <string name="btn_send">ENVIAR</string>
    <string name="remembered_password">Lembrou sua senha? Faça login</string>
    <string name="agenda_doctor_title">Agenda Médica</string>
    <string name="agenda_doctor_subtitle">Selecione uma data para gerenciar consultas</string>
    <string name="agenda_dialog_title">Consultas do Dia</string>
    <string name="btn_close">FECHAR</string>
    <string name="status_absent">AUSENTE</string>
    <string name="btn_profile">PERFIL</string>
    <string name="history_title">Histórico de Consultas</string>
    <string name="history_subtitle">Veja suas consultas passadas e agendadas</string>
    <string name="clinical_history_title">Histórico Clínico</string>
    <string name="clinical_history_subtitle">Registros e prontuários do paciente</string>
    <string name="btn_view_record">VER PRONTUÁRIO</string>
    <string name="new_appointment_title">Novo Agendamento</string>
    <string name="new_appointment_subtitle">Escolha o profissional e o melhor horário</string>
    <string name="select_time_label">Escolha o horário:</string>
    <string name="btn_confirm_appointment">CONFIRMAR AGENDAMENTO</string>
    <string name="patient_profile_title">Perfil do Paciente</string>
    <string name="patient_profile_subtitle">Informações gerais e histórico clínico</string>
    <string name="btn_start_consultation">INICIAR CONSULTA</string>
    <string name="label_patient">Paciente:</string>
    <string name="label_birthdate">Nascimento:</string>
    <string name="label_gender">Sexo:</string>
    <string name="label_blood_type">Tipo Sanguíneo:</string>
    <string name="label_allergies">Alergias:</string>
    <string name="record_title_1">Prontuário (1/2)</string>
    <string name="record_subtitle_1">Anamnese e informações iniciais</string>
    <string name="record_title_2">Prontuário (2/2)</string>
    <string name="record_subtitle_2">Conclusão, diagnóstico e prescrição</string>
    <string name="hint_complaints">Queixas</string>
    <string name="hint_med_allergies">Alergias a medicamentos</string>
    <string name="hint_current_meds">Medicamentos em uso</string>
    <string name="hint_previous_diseases">Doenças anteriores</string>
    <string name="hint_diagnosis">Diagnóstico</string>
    <string name="hint_prescription">Prescrição (Medicamentos/Tratamento)</string>
    <string name="btn_save_record">SALVAR PRONTUÁRIO</string>
    <string name="loading">Carregando...</string>
    <string name="placeholder_date">--/--/----</string>
    <string name="placeholder_dash">--</string>
    <string name="my_appointments_title">Suas Consultas</string>
    <string name="my_appointments_subtitle">Gerencie seus agendamentos pendentes</string>
    <string name="btn_reschedule">REMARCAR</string>
    <string name="reschedule_dialog_title">Remarcar Consulta</string>
    <string name="select_new_time_label">Escolha o novo horário:</string>
    <string name="btn_confirm_reschedule">CONFIRMAR NOVA DATA</string>
    <string name="reports_title">Relatórios e Estatísticas</string>
    <string name="reports_subtitle">Visão geral do desempenho e dados do iMed</string>
    <string name="label_total_appointments">Total Consultas</string>
    <string name="label_completed_appointments">Realizadas</string>
    <string name="label_canceled_appointments">Canceladas</string>
    <string name="label_total_patients">Total Pacientes</string>
    <string name="label_active_doctors">Médicos Ativos</string>
    <string name="label_specialties_chart">Especialidades mais Procuradas</string>
    <string name="label_monthly_chart">Consultas Realizadas por Mês</string>
    <string name="chart_area_placeholder">Carregando dados...</string>
    <string name="specialty_others">Outros</string>
    <string name="view_record_title">Visualizar Prontuário</string>
    <string name="view_record_subtitle">Consulta detalhada dos registros clínicos</string>
    <string name="label_complaints">Queixas</string>
    <string name="label_med_allergies">Alergias</string>
    <string name="label_current_meds">Medicamentos em uso</string>
    <string name="label_previous_diseases">Doenças Anteriores</string>
    <string name="label_diagnosis">Diagnóstico</string>
    <string name="label_prescription">Prescrição</string>
    <string name="anamnesis_section">ANAMNESE</string>
    <string name="clinical_conclusion_section">CONCLUSÃO CLÍNICA</string>
</resources>